--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/LiquidacionVacaciones/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/LiquidacionVacaciones/Modificar.cshtml
@@ -15,16 +15,6 @@
             </h4>
         </div>
     }
-
-    if (ViewBag.MensajeSuccess != null)
-    {
-        <div class="alert alert-success alert-dismissible">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-            <h4>
-                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
-            </h4>
-        </div>
-    }
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
@@ -32,29 +22,24 @@
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
-    @Html.HiddenFor(q => q.IdSolicitud);
-    @Html.HiddenFor(q => q.IdEmpleado);
-    @Html.HiddenFor(q => q.IdLiquidacion);
+    @Html.HiddenFor(q => q.IdSolicitud, new { @id = "IdSolicitud" });
+    @Html.HiddenFor(q => q.IdEmpleado, new { @id = "IdEmpleado" });
+
+
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
             <div class="col-md-12">
+
                 <div class="form-group">
-                    <label for="Empleado">Empleado*</label>
+                    <label for="IdProveedor">Empleado*</label>
                     @Html.Partial("_CmbEmpleado_vaca", Model.IdEmpleado)
                     @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
-    </div>
-
-
-    <div class="row">
-        <div class="col-md-12">
-
-            <div class="col-md-2">
+            <div class="col-md-4">
                 <div class="form-group">
-                    <label for="Fecha_PriPago">Fecha desde*</label>
+                    <label for="Fecha_Desde">Fecha desde*</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
@@ -67,18 +52,16 @@
                        settings.Properties.EditFormatString = "dd/MM/yyyy";
                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Enabled = false;
+
                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha_Desde, "", new { @class = "text-danger" })
                     </div>
                 </div>
+
             </div>
-
-
-
-            <div class="col-md-2">
+            <div class="col-md-4">
                 <div class="form-group">
-                    <label for="Fecha_PriPago">Fecha hasta*</label>
+                    <label for="Fecha_Hasta">Fecha hasta*</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
@@ -91,148 +74,68 @@
                        settings.Properties.EditFormatString = "dd/MM/yyyy";
                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Enabled = false;
 
                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha_Hasta, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
-
-            <div class="col-md-2">
+            <div class="col-md-4">
                 <div class="form-group">
-                    <label for="Fecha_PriPago">Fecha retorno*</label>
+                    <label for="Fecha_Retorno">Fecha retorno*</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
                         @Html.DevExpress().DateEditFor(q => q.Fecha_Retorno, settings =>
-                   {
-                       settings.Name = "Fecha_Retorno";
-                       settings.Properties.UseMaskBehavior = true;
-                       settings.Properties.EditFormat = EditFormat.Date;
-                       settings.Properties.EditFormatString = "dd/MM/yyyy";
-                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Enabled = false;
-
-                   }).GetHtml()
+                       {
+                           settings.Name = "Fecha_Retorno";
+                           settings.Properties.UseMaskBehavior = true;
+                           settings.Properties.EditFormat = EditFormat.Date;
+                           settings.Properties.EditFormatString = "dd/MM/yyyy";
+                           settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                       }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha_Retorno, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
 
-
-            <div class="col-md-2">
-                <div class="form-group">
-                    <div class="form-group">
-                        <label for="Gozadas_Pgadas"></label>
-                        @Html.DevExpress().CheckBoxFor(q => q.Gozadas_Pgadas, settings =>
-                   {
-                       settings.Name = "Gozadas_Pgadas";
-                       settings.Text = "Vacaciones gozadas";
-                       settings.Enabled = false;
-                   }).GetHtml()
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
-
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="Fecha_PriPago">Periodo desde*</label>
-                    <div class="input-group date">
-                        <div class="input-group-addon">
-                            <i class="fa fa-calendar"></i>
-                        </div>
-                        @Html.DevExpress().DateEditFor(q => q.Anio_Desde, settings =>
-                   {
-                       settings.Name = "Anio_Desde";
-                       settings.Properties.UseMaskBehavior = true;
-                       settings.Properties.EditFormat = EditFormat.Date;
-                       settings.Properties.EditFormatString = "dd/MM/yyyy";
-                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Properties.ClientSideEvents.ValueChanged = "function(s,e){get_detalle_vacaciones();}";
-
-                   }).GetHtml()
-                        @Html.ValidationMessageFor(q => q.Anio_Desde, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="Fecha_PriPago">Periodo hasta*</label>
-                    <div class="input-group date">
-                        <div class="input-group-addon">
-                            <i class="fa fa-calendar"></i>
-                        </div>
-                        @Html.DevExpress().DateEditFor(q => q.Anio_Hasta, settings =>
-                   {
-                       settings.Name = "Anio_Hasta";
-                       settings.Properties.UseMaskBehavior = true;
-                       settings.Properties.EditFormat = EditFormat.Date;
-                       settings.Properties.EditFormatString = "dd/MM/yyyy";
-                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Properties.ClientSideEvents.ValueChanged = "function(s,e){get_detalle_vacaciones();}";
-
-                   }).GetHtml()
-                        @Html.ValidationMessageFor(q => q.Anio_Hasta, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="Dias_q_Corresponde">Días corresponde</label>
-                    @Html.TextBoxFor(q => q.Dias_q_Corresponde, new { @class = "form-control", @disabled = "disabled" })
-                    @Html.ValidationMessageFor(q => q.Dias_q_Corresponde, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="Dias_a_disfrutar">Días tomados*</label>
-                    @Html.TextBoxFor(q => q.Dias_a_disfrutar, new { @class = "form-control", @disabled = "disabled" })
-                    @Html.ValidationMessageFor(q => q.Dias_a_disfrutar, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="Fecha_Retorno">Días pendientes*</label>
-                    @Html.TextBoxFor(q => q.Dias_pendiente, new { @class = "form-control", @disabled = "disabled" })
-                    @Html.ValidationMessageFor(q => q.Dias_pendiente, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="Observaciones">Observación*</label>
+                    <label for="Observacion">Observación*</label>
                     @Html.TextBoxFor(q => q.Observaciones, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.Observaciones, "", new { @class = "text-danger" })
                 </div>
             </div>
+
         </div>
+
+        <div class="col-md-6">
+            <div class="col-md-6">
+
+                <div class="form-group">
+                    <label for="GridViewPartial_prestamos_det">Periodos de vacaciones</label>
+                    @Html.Action("GridViewPartial_solicitud_vacaciones_det", new { Area = "RRHH", Controller = "Vacaciones" })
+
+                </div>
+            </div>
+        </div>
+
     </div>
+
+
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="form-group">
-                    <label for="Observaciones">Detalle de vacaciones</label>
+                    <label for="Observaciones">Detalle de liquidacion</label>
                     @Html.Action("GridViewPartial_vacaciones_liquidadas_det")
                 </div>
             </div>
         </div>
     </div>
+
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
@@ -243,6 +146,7 @@
     }
 }
 <script>
+
     function get_detalle_vacaciones() {
         var datos = {
 
@@ -268,11 +172,5 @@
             }
         });
     };
-
-    function Imprimir() {
-        var location = GetPathServer();
-        var win = window.open(location +"/Reportes/RRHHReportes/ROL_006?IdEmpresa="+@Model.IdEmpresa+"&IdEmpleado="+@Model.IdEmpleado, '_blank');
-        win.focus();
-    }
 </script>
 
