--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/LiquidacionVacaciones/_GridViewPartial_vacaciones_liquidadas_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/LiquidacionVacaciones/_GridViewPartial_vacaciones_liquidadas_det.cshtml
@@ -31,7 +31,7 @@
         //Funcion para inicializar fila al presionar nuevo
         settings.Columns.Add(column =>
         {
-            column.FieldName = "Sec";
+            column.FieldName = "Secuencia";
             column.Caption = "Secuencia";
             column.Width = Unit.Percentage(15);
             column.EditFormSettings.Visible = DefaultBoolean.False;
