--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/LiquidacionVacaciones/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/LiquidacionVacaciones/Modificar.cshtml
@@ -24,6 +24,7 @@
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdSolicitud, new { @id = "IdSolicitud" });
     @Html.HiddenFor(q => q.IdEmpleado, new { @id = "IdEmpleado" });
+    @Html.HiddenFor(q => q.IdLiquidacion, new { @id = "IdSolicitud" });
 
 
 
