--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/LiquidacionVacaciones/_GridViewPartial_vacaciones_liquidadas_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/LiquidacionVacaciones/_GridViewPartial_vacaciones_liquidadas_det.cshtml
@@ -8,7 +8,7 @@
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "LiquidacionVacaciones", Action = "EditingUpdate", Area = "RRHH" };
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "Sec";
+        settings.KeyFieldName = "Secuencia";
 
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowEditButton = true;
