--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Dashboard/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Dashboard/Index.cshtml
@@ -31,11 +31,53 @@
             </div>
             <div class="box-body">
                 <div class="col-md-3">
+                </div>
+                <div class="col-md-3">
                     <canvas class="canvas" id="UltimasVentasAnio"></canvas>
                 </div>
                 <div class="col-md-3">
                     <canvas class="canvas" id="UltimasVentasMeses"></canvas>
-                </div>                    
+                </div> 
+                <div class="col-md-3">
+                </div>
+                @*<div class="col-md-3">
+                    <!-- Info Boxes Style 2 -->
+                    <div class="info-box bg-yellow">
+                        <span class="info-box-icon"><i class="ion ion-cash"></i></span>
+                        <div class="info-box-content">
+                            <span class="info-box-text">Facturación</span>
+                            <span class="info-box-number">5,200</span>
+                            <span id="Facturado" class="progress-description">
+                                50% Increase in 30 Days
+                            </span>
+                        </div>
+                        <!-- /.info-box-content -->
+                    </div>
+                    <!-- /.info-box -->
+                    <div class="info-box bg-green">
+                        <span class="info-box-icon"><i class="ion ion-calculator"></i></span>
+                        <div class="info-box-content">
+                            <span class="info-box-text">Cobros</span>
+                            <span class="info-box-number">92,050</span>
+                            <span id="Cobrado" class="progress-description">
+                                20% Increase in 30 Days
+                            </span>
+                        </div>
+                        <!-- /.info-box-content -->
+                    </div>
+                    <!-- /.info-box -->
+                    <div class="info-box bg-aqua">
+                        <span class="info-box-icon"><i class="ion-android-checkmark-circle"></i></span>
+                        <div class="info-box-content">
+                            <span class="info-box-text">Caja</span>
+                            <span class="info-box-number">163,921</span>
+                            <span id="Caja" class="progress-description">
+                                40% Increase in 30 Days
+                            </span>
+                        </div>
+                        <!-- /.info-box-content -->
+                    </div>
+                </div>*@                  
             </div>
         </div>
         <div class="box">
@@ -81,8 +123,12 @@
                 </div>
             </div>
             <div class="box-body">
+                <div class="col-md-1">
+                </div>
                 <div class="col-md-3">
                     <canvas class="canvas" id="VentasProductos"></canvas>
+                </div>
+                <div class="col-md-2">
                 </div>
                 <div class="col-md-6">
                     <table id="Table_VentasProductos" class="table table-responsive dataTable dataTables_paginate">
