--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CanastaBasica/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CanastaBasica/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.RRHH.ro_cargo_Info
+﻿@model Core.Erp.Info.RRHH.ro_canasta_basica_Info
 @{
     ViewBag.Title = "Consulta de cargos";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,10 +10,8 @@
 
 @using (Html.BeginForm())
 {
-    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
-    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
-
-    @Html.Action("GridViewPartial_cargo")
+    @Html.HiddenFor(q => q.Anio, new { @id = "Anio" })
+    @Html.Action("GridViewPartial_canasta_basica")
 
 }
 
